# leetcode-python

./: .coveragerc  .gitignore  Makefile  README.md  anaconda-project.yml  format.sh  pyproject.toml  qodana.yaml  requirements.txt  setup.py  sonar-project.properties
.github/workflows/: ci.yml  python-package-conda.yml  qodana_code_quality.yml
conda.recipe/: meta.yaml
reports/: test-results.xml
solutions/: __init__.py  solution_1672.py  solution_1678.py  solution_1688.py  solution_1732.py  solution_938.py
src/: solution_1431.py  solution_1662.py  solution_1672.py  solution_1678.py  solution_1704.py  solution_1720.py  solution_938.py
src/leetcode/: lc_104.py  lc_1071.py  lc_118.py  lc_151.py  lc_1863.py  lc_2037.py  lc_206.py  lc_21.py  lc_2798.py  lc_3110.py  lc_3264.py  lc_344.py  lc_412.py  lc_509.py  lc_605.py  lc_938.py  solution_1431.py  solution_1480.py  solution_1614.py  solution_1662.py  solution_1672.py  solution_1678.py  solution_1684.py  solution_1688.py  solution_1704.py  solution_1720.py  solution_1732.py  solution_2011.py  solution_2469.py  solution_2894.py  solution_2942.py  solution_3146.py  solution_3190.py  solution_3280.py  solution_3289.py  solution_938.py
src/others/: contiguous_blocks.py
src/recursion/: recursion.py
tests/: test_solution_1431.py  test_solution_1480.py  test_solution_1662.py  test_solution_1672.py  test_solution_1678.py  test_solution_1684.py  test_solution_1688.py  test_solution_1704.py  test_solution_1720.py  test_solution_1732.py  test_solution_938.py
tests/leetcode/: test_lc_3110.py  test_solution_1431.py  test_solution_1480.py  test_solution_1662.py  test_solution_1672.py  test_solution_1678.py  test_solution_1684.py  test_solution_1688.py  test_solution_1704.py  test_solution_1720.py  test_solution_1732.py  test_solution_938.py
tests/others/: test_contiguous_blocks.py
