[project]
name = "leetcode-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
  "requests>=2.32.3",
]

[dependency-groups]
dev = [
  "pytest-cov>=6.0.0",
  "pytest>=8.3.4",
  "ruff>=0.9.4",
]

[tool.ruff]
src = ["src", "tests"]
exclude = [".venv"]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
markers = [
  "others"
]

testpaths = "tests"

[tool.coverage.run]
source = ["src/"]
branch = true
concurrency = ["multiprocessing"]
parallel = true
sigterm = true
omit = ["tests/**"]

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", "src/experimental", "src/typestubs"]
defineConstant = { DEBUG = true }

reportUnusedFunction = true
reportUnusedImport = true
reportUnusedClass = true
reportUnusedVariable = true
reportDuplicateImport = true
strictListInference = true
reportMissingImports = true
reportMissingTypeStubs = false
analyzeUnannotatedFunctions = true
deprecateTypingAliases = true
reportConstantRedefinition = true
reportShadowedImports = true
reportUnusedExpression = true
reportGeneralTypeIssues = false

pythonVersion = "3.13"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
